add EXIF metadata preservation with auto-rotation
- Add TwelveMonkeys ImageIO dependencies for robust metadata handling
- Create ExifMetadata and ExifOrientation classes for metadata management
- Update ImageLoader to read and store metadata via loadWithMetadata methods
- Update ImageSaver to write metadata to output via writeWithMetadata methods
- Add ImageWithMetadata wrapper to preserve metadata through processing pipeline
- Implement automatic rotation based on orientation tags in Scale4jBuilder
- Fix critical EXIF orientation mapping issues for all 8 orientation values
- Add comprehensive benchmarking infrastructure with TestImageFactory
- Improve error handling with logging and null safety checks
- Add 23 new unit tests for metadata features (ExifOrientationTest, ExifMetadataTest)
- Update SPEC.md with implementation details and license compliance information

BREAKING CHANGE: ImageLoader and ImageSaver APIs now include metadata-aware methods. Users relying on the previous behavior without metadata preservation will need to update their code to use the new loadWithMetadata and writeWithMetadata methods.