@@ -34,13 +34,9 @@ public class AsyncBenchmark {
         int width = Integer.parseInt(parts[0]);
         int height = Integer.parseInt(parts[1]);
 
-        sourceImage = createTestImage(width, height);
+        sourceImage = TestImageFactory.createSolidTestImage(width, height);
 
-        try {
-            executor = Executors.newVirtualThreadPerTaskExecutor();
-        } catch (Exception e) {
-            executor = Executors.newCachedThreadPool();
-        }
+        executor = Executors.newCachedThreadPool();
     }
 
     @TearDown
@@ -50,14 +46,7 @@ public class AsyncBenchmark {
         }
     }
 
-    private BufferedImage createTestImage(int width, int height) {
-        BufferedImage image = new BufferedImage(width, height, BufferedImage.TYPE_INT_RGB);
-        Graphics2D g2d = image.createGraphics();
-        g2d.setColor(new Color(100, 150, 200));
-        g2d.fillRect(0, 0, width, height);
-        g2d.dispose();
-        return image;
-    }
+
 
     @Benchmark
     public List<BufferedImage> asyncResizeMultiple() throws Exception {
